# DiffusionBasedImpedanceLearning

./: LICENSE  README.md  environment.yml
AVPTelemanipulation/: VisionProCppCommunication.py
AVPTelemanipulation/avp_stream/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
Data/Parkour/: RobotData_Circle_2025-03-25_14-19-22.txt  RobotData_Free_2025-03-10_17-57-18.txt  RobotData_LinearTable_2025-03-10_14-39-49.txt  RobotData_LinearTable_2025-03-10_14-41-45.txt  RobotData_LinearTable_2025-03-10_14-53-02.txt  RobotData_LinearTable_2025-03-10_14-57-31.txt  RobotData_LinearTable_2025-03-10_16-56-33.txt  TEST_NLS_FREE.txt
Data/Parkour/ApplicationData/: RobotData_Circle_2025-03-10_13-02-32.txt
Deployment/RobotController/data/: parkour_fullTrajectory.txt  pegInHole_circular_fullTrajectory.txt  pegInHole_square_fullTrajectory.txt  pegInHole_star_fullTrajectory.txt
Deployment/RobotController/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
ImpedanceLearning/: Binary2Text.py  DiffusionModel.py  data.py  models.py  stiffness_communication.py  train_val_test.py  utils.py
docs/: index.html
